tests/snapshots/anm_compile__no_source__err_missing_metadata.snap
---
source: tests/anm_compile.rs
expression: "compile_fail_stderr(Game::Th12, file(\"th12-err-missing-metadata.anm.spec\"))"
---
error: entry for 'subdir/file.png' is missing required field 'width'!
       (if this data is available in an existing anm file, try using `-i ANM_FILE`)


